--- a/profil.html
+++ b/profil.html
@@ -47,8 +47,8 @@
   <h2>Sejarah Singkat</h2>
   <p>
     Assistenku berawal dari kebutuhan masyarakat modern yang semakin kompleks. Meningkatnya kesibukan
-    kerja membuat keluarga dan bisnis membutuhkan tenaga profesional yang dapat dipercaya.  
-    Pada tahun 2023, Assistenku didirikan oleh individu dengan pengalaman operasional, HR, dan layanan publik.  
+    kerja membuat keluarga dan bisnis membutuhkan tenaga profesional yang dapat dipercaya.
+    Pada tahun 2023, Assistenku didirikan oleh individu dengan pengalaman operasional, HR, dan layanan publik.
     Sejak itu, kami menghadirkan layanan ART, babysitter, driver, kebersihan, dan asistensi bisnis skala kecil hingga besar.
   </p>
 </section>
@@ -57,27 +57,31 @@
   <h2>Founder & Manajemen</h2>
 
   <div class="card-grid">
+
+    <!-- Founder 1 -->
     <div class="card">
       <img src="founder1.png" style="width:100%; border-radius:12px;" alt="">
       <h3 style="margin-top:15px;">Abdurrahman Hanif</h3>
       <p>Pendiri & Direktur Operasional</p>
       <p>
         Memiliki pengalaman bertahun-tahun di bidang asistensi, layanan publik,
-        dan manajemen operasional. Berfokus membangun ekosistem layanan profesional
-        yang mudah diakses dan aman untuk seluruh klien.
+        dan manajemen operasional. Fokus membangun ekosistem layanan profesional
+        yang mudah diakses, aman, dan memberikan dampak positif bagi keluarga maupun bisnis.
       </p>
     </div>
 
+    <!-- Co-Founder -->
     <div class="card">
       <img src="founder2.png" style="width:100%; border-radius:12px;" alt="">
-      <h3 style="margin-top:15px;">Nama Founder Lain</h3>
+      <h3 style="margin-top:15px;">Putri Rahmadani</h3>
       <p>Co-Founder & HR Manager</p>
       <p>
-        Ahli dalam perekrutan dan pelatihan tenaga kerja rumah tangga, pengasuh,
-        dan asistensi pribadi. Mengembangkan standar rekrutmen dan kualitas layanan
-        tingkat tinggi.
+        Spesialis dalam perekrutan, pelatihan, dan pengembangan tenaga kerja rumah tangga,
+        pengasuh bayi dan lansia, serta asistensi pribadi. Menyusun standar kualitas SDM
+        untuk memastikan klien mendapatkan pelayanan terbaik.
       </p>
     </div>
+
   </div>
 </section>
 
@@ -85,17 +89,26 @@
   <h2>Legalitas Perusahaan</h2>
 
   <div class="card-grid">
+
     <div class="card">
-      <h3>NIB</h3>
-      <p>Nomor Induk Berusaha resmi sebagai perusahaan penyedia jasa tenaga kerja.</p>
-      <img src="nib1.png" style="width:100%;margin-top:12px;border-radius:12px;">
+      <h3>NIB Resmi</h3>
+      <p>Nomor Induk Berusaha resmi terdaftar sebagai penyedia jasa tenaga kerja.</p>
+      <img src="NIB1.png" style="width:100%; margin-top:12px; border-radius:12px;">
     </div>
 
     <div class="card">
       <h3>Legalitas Tambahan</h3>
-      <p>Sertifikat, dokumen izin, dan standar operasional terdaftar.</p>
-      <img src="nib2.png" style="width:100%;margin-top:12px;border-radius:12px;">
+      <p>Dokumen izin, sertifikasi, dan standar operasional yang sudah terverifikasi.</p>
+      <img src="NIB2.png" style="width:100%; margin-top:12px; border-radius:12px;">
+
+      <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk"
+         target="_blank"
+         class="btn-primary"
+         style="display:block; margin-top:15px; text-align:center;">
+        Lihat Semua Dokumen Legalitas
+      </a>
     </div>
+
   </div>
 </section>
 
