--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assistenku – Layanan Profesional Indonesia</title>
+  <title>Beranda | Assistenku</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,99 +11,53 @@
 <header>
   <div class="navbar">
     <img src="logo.png" class="logo" alt="Logo Assistenku">
-
     <nav>
       <ul>
         <li><a href="index.html" class="active">Beranda</a></li>
         <li><a href="profil.html">Profil</a></li>
-        <li><a href="layanan.html" id="navLayanan">Layanan</a></li>
-        <li><a href="karir.html" id="navKarir">Karir</a></li>
+        <li><a href="layanan.html">Layanan</a></li>
+        <li><a href="karir.html">Karir</a></li>
         <li><a href="kontak.html">Kontak</a></li>
       </ul>
     </nav>
-
     <div id="menuIcon">☰</div>
   </div>
 
   <div id="mobileMenu">
     <a href="index.html">Beranda</a>
     <a href="profil.html">Profil</a>
-    <a href="layanan.html" id="navLayanan">Layanan</a>
-    <a href="karir.html" id="navKarir">Karir</a>
+    <a href="layanan.html">Layanan</a>
+    <a href="karir.html">Karir</a>
     <a href="kontak.html">Kontak</a>
   </div>
 </header>
 
-<!-- HERO -->
-<div class="hero hero-nopic">
-  <div>
-    <h1>Selamat Datang di Assistenku</h1>
-    <p class="sambutan">
-      Terima kasih telah mengunjungi Assistenku, platform layanan asistensi profesional
-      yang hadir untuk menjadi solusi terpercaya bagi keluarga dan bisnis di Indonesia.
-      Kami percaya bahwa setiap keluarga berhak mendapatkan bantuan yang aman, terlatih,
-      dan berintegritas, sementara setiap pelaku usaha memerlukan tenaga kerja pendukung
-      yang disiplin, cekatan, dan berorientasi pelayanan.
-      <br><br>
-      Assistenku berdiri untuk menjembatani kebutuhan tersebut dengan menyediakan berbagai
-      layanan asistensi seperti asisten rumah tangga, pengasuhan bayi dan lansia, sopir pribadi,
-      petugas kebersihan, hingga tenaga operasional lainnya. Setiap tenaga yang kami salurkan
-      telah melalui proses seleksi ketat, pelatihan standar, serta pembinaan berkelanjutan demi
-      memastikan kualitas pelayanan terbaik bagi Anda.
-    </p>
+<section class="hero">
+  <h1>Selamat Datang di Assistenku</h1>
 
-    <a class="btn-primary" href="layanan.html">Lihat Layanan</a>
-  </div>
-</div>
+  <p>
+    Assistenku hadir sebagai solusi modern untuk membantu keluarga, pekerja, dan bisnis 
+    dalam memenuhi kebutuhan asistensi profesional yang aman, mudah, dan terpercaya. 
+    Di tengah kehidupan yang semakin cepat, kami memahami bahwa setiap orang membutuhkan
+    dukungan tambahan untuk mengatur pekerjaan rumah, menjaga anak, mengelola kebutuhan harian,
+    hingga membantu bisnis bertumbuh.
+  </p>
 
-<!-- VISI MISI -->
-<section>
-  <h2>Visi & Misi Assistenku</h2>
+  <p>
+    Dengan standar kualitas tinggi, proses seleksi ketat, dan pelatihan yang terstruktur,
+    Assistenku memastikan setiap tenaga kerja yang kami hadirkan mampu memberikan pelayanan terbaik.
+    Visi kami adalah menjadi penyedia layanan asistensi paling dipercaya di Indonesia,
+    dengan mengedepankan profesionalisme, etika kerja, dan kenyamanan klien.
+  </p>
 
-  <div class="card-grid">
-    <div class="card">
-      <h3>Visi</h3>
-      <p>
-        Menjadi penyedia layanan asistensi paling tepercaya dan profesional di Indonesia,
-        yang mengutamakan keamanan, kualitas, dan kenyamanan setiap pelanggan.
-      </p>
-    </div>
-
-    <div class="card">
-      <h3>Misi</h3>
-      <p>
-        • Menyediakan tenaga asistensi yang terlatih dan berkompeten.<br>
-        • Meningkatkan kesejahteraan pekerja melalui pelatihan dan pembinaan berkelanjutan.<br>
-        • Memberikan pelayanan cepat, transparan, dan ramah bagi seluruh pelanggan.<br>
-        • Menciptakan standar baru dalam layanan asistensi modern yang aman dan bersertifikat.
-      </p>
-    </div>
-  </div>
-</section>
-
-<section>
-  <h2>Layanan Unggulan</h2>
-
-  <div class="card-grid">
-    <div class="card">
-      <h3>Asisten Rumah Tangga</h3>
-      <p>Tenaga ART profesional, berpengalaman, dan memiliki etika kerja terbaik.</p>
-    </div>
-
-    <div class="card">
-      <h3>Pengasuh Bayi & Lansia</h3>
-      <p>Perawat terlatih untuk bayi baru lahir hingga lansia dengan kebutuhan khusus.</p>
-    </div>
-
-    <div class="card">
-      <h3>Sopir & Kebersihan</h3>
-      <p>Driver pribadi, tukang kebun, dan petugas kebersihan yang siap membantu operasional.</p>
-    </div>
-  </div>
+  <p>
+    Terima kasih telah mengunjungi Assistenku.  
+    Kami berharap dapat menjadi bagian dari kehidupan dan perjalanan Anda menuju kenyamanan dan efisiensi.
+  </p>
 </section>
 
 <footer>
-  © 2025 Assistenku – PT Assistenku Indonesia
+  © 2025 Assistenku
 </footer>
 
 <script src="script.js"></script>
