--- a/profil.html
+++ b/profil.html
@@ -16,8 +16,8 @@
       <ul>
         <li><a href="index.html">Beranda</a></li>
         <li><a href="profil.html" class="active">Profil</a></li>
-        <li><a href="layanan.html" id="navLayanan">Layanan</a></li>
-        <li><a href="karir.html" id="navKarir">Karir</a></li>
+        <li><a href="layanan.html">Layanan</a></li>
+        <li><a href="karir.html">Karir</a></li>
         <li><a href="kontak.html">Kontak</a></li>
       </ul>
     </nav>
@@ -28,29 +28,66 @@
   <div id="mobileMenu">
     <a href="index.html">Beranda</a>
     <a href="profil.html">Profil</a>
-    <a href="layanan.html" id="navLayanan">Layanan</a>
-    <a href="karir.html" id="navKarir">Karir</a>
+    <a href="layanan.html">Layanan</a>
+    <a href="karir.html">Karir</a>
     <a href="kontak.html">Kontak</a>
   </div>
 </header>
 
 <section style="padding-top:130px;">
   <h2>Profil Perusahaan</h2>
+
   <p>
-    Assistenku adalah penyedia layanan asistensi profesional yang berdiri untuk membantu keluarga
-    dan perusahaan dalam memenuhi kebutuhan sumber daya manusia harian. Kami fokus pada kualitas,
-    keamanan, dan kenyamanan—menghadirkan tenaga kerja terlatih yang siap memberikan pelayanan terbaik.
+    Assistenku merupakan perusahaan penyedia layanan asistensi profesional yang hadir untuk 
+    menjawab kebutuhan masyarakat modern. Di tengah perkembangan dunia yang semakin cepat, 
+    banyak keluarga dan pelaku bisnis membutuhkan dukungan tambahan agar berbagai pekerjaan 
+    harian dapat berjalan lebih efektif, aman, dan terstruktur.
+  </p>
+
+  <p>
+    Kami percaya bahwa sumber daya manusia yang berkualitas adalah kunci utama dalam menciptakan 
+    layanan terbaik. Oleh sebab itu, Assistenku menerapkan proses seleksi yang ketat, 
+    pelatihan yang menyeluruh, serta standar operasional yang terukur demi menjaga kenyamanan 
+    dan keamanan klien. Setiap tenaga kerja yang bergabung bersama kami dibimbing untuk memiliki 
+    sikap profesional, disiplin, jujur, dan siap melayani dengan sepenuh hati.
   </p>
 </section>
 
 <section>
   <h2>Sejarah Singkat</h2>
+
   <p>
-    Assistenku berawal dari kebutuhan masyarakat modern yang semakin kompleks. Meningkatnya kesibukan
-    kerja membuat keluarga dan bisnis membutuhkan tenaga profesional yang dapat dipercaya.
-    Pada tahun 2023, Assistenku didirikan oleh individu dengan pengalaman operasional, HR, dan layanan publik.
-    Sejak itu, kami menghadirkan layanan ART, babysitter, driver, kebersihan, dan asistensi bisnis skala kecil hingga besar.
+    Assistenku berdiri atas dasar kepedulian terhadap meningkatnya kebutuhan asistensi rumah tangga 
+    dan tenaga kerja harian yang berkualitas. Banyak keluarga, pekerja urban, dan pelaku bisnis kecil 
+    mengalami kesulitan dalam menemukan tenaga profesional yang dapat dipercaya dan mampu bekerja 
+    sesuai standar. Dari sinilah Assistenku lahir—sebuah solusi yang menggabungkan teknologi, 
+    manajemen modern, dan sumber daya manusia terlatih untuk memberikan pengalaman pelayanan terbaik.
   </p>
+
+  <p>
+    Sejak awal berdiri pada tahun 2023, Assistenku telah berkembang dengan fokus pada kualitas layanan, 
+    inovasi sistem operasional, dan komitmen terhadap kepuasan klien. Dengan semakin tumbuhnya permintaan, 
+    kami memperluas cakupan layanan dan menambah program pelatihan demi menciptakan tenaga asistensi yang 
+    kompeten dan terpercaya.
+  </p>
+</section>
+
+<section>
+  <h2>Visi & Misi</h2>
+
+  <p><strong>Visi:</strong>  
+    Menjadi penyedia layanan asistensi paling dipercaya di Indonesia dengan mengutamakan kualitas, 
+    keamanan, dan kenyamanan klien.
+  </p>
+
+  <p><strong>Misi:</strong></p>
+  <ul style="margin-left:20px;">
+    <li>Menyediakan tenaga kerja terlatih melalui proses seleksi dan pelatihan terstandar.</li>
+    <li>Menghadirkan layanan asistensi yang mudah diakses, cepat, dan aman.</li>
+    <li>Mengembangkan ekosistem pelayanan berbasis teknologi untuk meningkatkan efisiensi.</li>
+    <li>Mendukung keluarga dan bisnis dalam menyelesaikan berbagai kebutuhan harian secara profesional.</li>
+    <li>Membangun hubungan jangka panjang dengan klien melalui pelayanan terbaik.</li>
+  </ul>
 </section>
 
 <section>
@@ -58,15 +95,17 @@
 
   <div class="card-grid">
 
-    <!-- Founder 1 -->
+    <!-- Founder -->
     <div class="card">
       <img src="founder1.png" style="width:100%; border-radius:12px;" alt="">
       <h3 style="margin-top:15px;">Abdurrahman Hanif</h3>
-      <p>Pendiri & Direktur Operasional</p>
+      <p><strong>Pendiri & Direktur Operasional</strong></p>
+
       <p>
-        Memiliki pengalaman bertahun-tahun di bidang asistensi, layanan publik,
-        dan manajemen operasional. Fokus membangun ekosistem layanan profesional
-        yang mudah diakses, aman, dan memberikan dampak positif bagi keluarga maupun bisnis.
+        Abdurrahman Hanif merupakan sosok yang memiliki pengalaman dalam operasional layanan publik, 
+        manajemen SDM, serta pengelolaan sistem kerja modern. Dengan visi kuat untuk menciptakan 
+        ekosistem asistensi profesional, beliau merancang struktur operasional Assistenku agar mampu 
+        memberikan pelayanan dengan standar tinggi, efisien, dan aman bagi seluruh klien.
       </p>
     </div>
 
@@ -74,11 +113,13 @@
     <div class="card">
       <img src="founder2.png" style="width:100%; border-radius:12px;" alt="">
       <h3 style="margin-top:15px;">Putri Rahmadani</h3>
-      <p>Co-Founder & HR Manager</p>
+      <p><strong>Co-Founder & HR Manager</strong></p>
+
       <p>
-        Spesialis dalam perekrutan, pelatihan, dan pengembangan tenaga kerja rumah tangga,
-        pengasuh bayi dan lansia, serta asistensi pribadi. Menyusun standar kualitas SDM
-        untuk memastikan klien mendapatkan pelayanan terbaik.
+        Memiliki latar belakang dalam pengembangan sumber daya manusia, Putri Rahmadani berperan aktif 
+        dalam melakukan seleksi, pelatihan, dan pembinaan tenaga kerja. Fokus utamanya adalah 
+        memastikan setiap anggota tim memiliki etika kerja yang tinggi, memahami SOP layanan, 
+        dan mampu menjalankan tugas dengan profesionalisme terbaik.
       </p>
     </div>
 
@@ -89,26 +130,24 @@
   <h2>Legalitas Perusahaan</h2>
 
   <div class="card-grid">
-
     <div class="card">
       <h3>NIB Resmi</h3>
-      <p>Nomor Induk Berusaha resmi terdaftar sebagai penyedia jasa tenaga kerja.</p>
+      <p>Assistenku telah terdaftar sebagai penyedia jasa tenaga kerja resmi dengan legalitas lengkap.</p>
       <img src="NIB1.png" style="width:100%; margin-top:12px; border-radius:12px;">
     </div>
 
     <div class="card">
-      <h3>Legalitas Tambahan</h3>
-      <p>Dokumen izin, sertifikasi, dan standar operasional yang sudah terverifikasi.</p>
+      <h3>Dokumen Legalitas Tambahan</h3>
+      <p>Dokumen izin, sertifikasi, dan legalitas operasional lainnya telah terverifikasi.</p>
       <img src="NIB2.png" style="width:100%; margin-top:12px; border-radius:12px;">
 
       <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk"
-         target="_blank"
          class="btn-primary"
+         target="_blank"
          style="display:block; margin-top:15px; text-align:center;">
-        Lihat Semua Dokumen Legalitas
+         Akses Dokumen Legalitas
       </a>
     </div>
-
   </div>
 </section>
 
