--- a/karir.html
+++ b/karir.html
@@ -16,8 +16,8 @@
       <ul>
         <li><a href="index.html">Beranda</a></li>
         <li><a href="profil.html">Profil</a></li>
-        <li><a href="layanan.html" id="navLayanan">Layanan</a></li>
-        <li><a href="karir.html" class="active" id="navKarir">Karir</a></li>
+        <li><a href="layanan.html">Layanan</a></li>
+        <li><a href="karir.html" class="active">Karir</a></li>
         <li><a href="kontak.html">Kontak</a></li>
       </ul>
     </nav>
@@ -28,8 +28,8 @@
   <div id="mobileMenu">
     <a href="index.html">Beranda</a>
     <a href="profil.html">Profil</a>
-    <a href="layanan.html" id="navLayanan">Layanan</a>
-    <a href="karir.html" id="navKarir">Karir</a>
+    <a href="layanan.html">Layanan</a>
+    <a href="karir.html">Karir</a>
     <a href="kontak.html">Kontak</a>
   </div>
 </header>
@@ -37,59 +37,138 @@
 <section style="padding-top:130px;">
   <h2>Karir di Assistenku</h2>
   <p>
-    Assistenku membuka peluang kerja bagi kandidat berkualitas yang ingin berkembang di dunia
-    layanan asistensi. Kami menyediakan pelatihan, pembinaan, dan penempatan kerja yang stabil.
+    Assistenku membuka kesempatan bagi tenaga kerja yang ingin bergabung sebagai tenaga asistensi
+    profesional. Kami berkomitmen memberikan pelatihan, pembinaan, dan kesempatan kerja yang stabil
+    bagi setiap kandidat yang memenuhi kualifikasi. Berikut daftar lowongan yang tersedia:
   </p>
 </section>
 
 <section>
   <div class="card-grid">
 
+    <!-- ART -->
     <div class="card">
-      <h3>Asisten Rumah Tangga</h3>
-      <p>
-        Jobdesk: bersih-bersih, memasak, mencuci, merapikan rumah, dan tugas operasional lainnya.
-      </p>
+      <h3>Asisten Rumah Tangga (ART)</h3>
+      <p>Posisi ini ditujukan bagi kandidat yang siap bekerja mengelola kebutuhan rumah tangga harian.</p>
+
+      <h4>Tugas & Tanggung Jawab:</h4>
+      <ul>
+        <li>Membersihkan area rumah setiap hari</li>
+        <li>Mencuci dan menyetrika pakaian</li>
+        <li>Menata dan merapikan ruangan</li>
+        <li>Membantu tugas dasar dapur</li>
+        <li>Mengelola kebutuhan rumah tangga</li>
+      </ul>
+
+      <h4>Persyaratan:</h4>
+      <ul>
+        <li>Perempuan, rajin, jujur, dan disiplin</li>
+        <li>Pengalaman lebih disukai, pemula diterima</li>
+        <li>Bisa bekerja dengan instruksi</li>
+        <li>Siap tinggal di tempat atau pulang-pergi</li>
+      </ul>
     </div>
 
+    <!-- Caregiver -->
     <div class="card">
-      <h3>Babysitter</h3>
-      <p>
-        Mengasuh bayi dan balita, membuat susu, memandikan, menjaga jadwal tidur, dan keamanan anak.
-      </p>
+      <h3>Caregiver / Pendamping Lansia</h3>
+      <p>Membantu merawat lansia dengan perhatian, ketelatenan, dan pemantauan kesehatan harian.</p>
+
+      <h4>Tugas & Tanggung Jawab:</h4>
+      <ul>
+        <li>Membantu kebersihan diri lansia</li>
+        <li>Mengatur jadwal obat</li>
+        <li>Menyiapkan keperluan harian lansia</li>
+        <li>Mendampingi aktivitas ringan</li>
+        <li>Memantau kondisi fisik lansia</li>
+      </ul>
+
+      <h4>Persyaratan:</h4>
+      <ul>
+        <li>Perempuan atau laki-laki yang telaten</li>
+        <li>Pengalaman merawat lansia sangat diutamakan</li>
+        <li>Komunikatif dan sabar</li>
+        <li>Sehat jasmani dan rohani</li>
+      </ul>
     </div>
 
-    <div class="card">
-      <h3>Perawat Lansia</h3>
-      <p>
-        Mengawasi kesehatan, memberi obat, memandikan, mendampingi aktivitas lansia.
-      </p>
-    </div>
-
+    <!-- Driver -->
     <div class="card">
       <h3>Sopir Pribadi</h3>
-      <p>
-        Mengantar jemput, menjaga kebersihan mobil, dan memastikan keselamatan perjalanan.
-      </p>
+      <p>Diperuntukkan bagi pengemudi berpengalaman, beretika, dan memahami rute dengan baik.</p>
+
+      <h4>Tugas & Tanggung Jawab:</h4>
+      <ul>
+        <li>Mengemudi dan mengantar keluarga atau perusahaan</li>
+        <li>Menjaga kebersihan kendaraan</li>
+        <li>Memastikan kelayakan kendaraan sebelum dipakai</li>
+        <li>Mengemudi dengan aman, sopan, dan sesuai aturan</li>
+      </ul>
+
+      <h4>Persyaratan:</h4>
+      <ul>
+        <li>Laki-laki berpengalaman mengemudi</li>
+        <li>Paham rute kota</li>
+        <li>Mampu bekerja fleksibel</li>
+        <li>Memiliki SIM A/B aktif</li>
+      </ul>
     </div>
 
+    <!-- Penjaga Toko -->
     <div class="card">
-      <h3>Petugas Kebersihan</h3>
+      <h3>Penjaga Toko</h3>
       <p>
-        Membersihkan area rumah/kantor, pembersihan harian atau general cleaning.
+        Dicari tenaga penjaga toko yang siap membantu operasional harian, melayani konsumen,
+        dan memastikan toko berjalan tertib.
       </p>
+
+      <h4>Tugas & Tanggung Jawab:</h4>
+      <ul>
+        <li>Melayani pelanggan dengan ramah</li>
+        <li>Menjaga kebersihan dan kerapian toko</li>
+        <li>Mencatat stok dan mengelola barang</li>
+        <li>Menangani transaksi dasar (jika diperlukan)</li>
+      </ul>
+
+      <h4>Persyaratan:</h4>
+      <ul>
+        <li>Pria/wanita usia kerja</li>
+        <li>Berpenampilan rapi dan sopan</li>
+        <li>Komunikatif dan jujur</li>
+        <li>Bersedia bekerja shift</li>
+      </ul>
+    </div>
+
+    <!-- Asistensi Lainnya -->
+    <div class="card">
+      <h3>Asistensi Lainnya</h3>
+      <p>Meliputi asisten pribadi, kurir internal, office helper, dan tenaga operasional.</p>
+
+      <h4>Tugas & Tanggung Jawab:</h4>
+      <ul>
+        <li>Membantu administrasi ringan</li>
+        <li>Mengelola dokumen kantor</li>
+        <li>Mengirim barang internal</li>
+        <li>Membantu operasional sesuai kebutuhan perusahaan</li>
+      </ul>
+
+      <h4>Persyaratan:</h4>
+      <ul>
+        <li>Laki-laki atau perempuan</li>
+        <li>Disiplin dan bertanggung jawab</li>
+        <li>Mampu bekerja mandiri</li>
+        <li>Bersedia ditempatkan sesuai kebutuhan</li>
+      </ul>
     </div>
 
   </div>
 </section>
 
 <section>
-  <h2>Sistem Gaji & Penempatan</h2>
-  <p>Klik tombol berikut untuk melihat detail sistem gaji:</p>
+  <h2>Akses Berkas Rekrutmen</h2>
+  <p>Tekan tombol berikut untuk membuka formulir atau informasi rekrutmen lengkap:</p>
 
-  <a class="btn-primary" href="https://drive.google.com/file/d/1UKaP7oSB11vBh2wI1u0qBCkwVF-YHEeD/view?usp=drivesdk" target="_blank">
-    Akses Dokumen Sistem Gaji
-  </a>
+  <button id="karirBtn" class="lock-button locked">🔒 Akses Terkunci</button>
 </section>
 
 <footer>
@@ -98,4 +177,4 @@
 
 <script src="script.js"></script>
 </body>
-</html>
+                                                   </html>
