--- a/profil.html
+++ b/profil.html
@@ -35,91 +35,79 @@
 </header>
 
 <section style="padding-top:130px;">
-  <h2>Profil Perusahaan</h2>
-
+  <h2>Tentang Assistenku</h2>
   <p>
-    Assistenku merupakan perusahaan penyedia layanan asistensi profesional yang hadir untuk 
-    menjawab kebutuhan masyarakat modern. Di tengah perkembangan dunia yang semakin cepat, 
-    banyak keluarga dan pelaku bisnis membutuhkan dukungan tambahan agar berbagai pekerjaan 
-    harian dapat berjalan lebih efektif, aman, dan terstruktur.
-  </p>
-
-  <p>
-    Kami percaya bahwa sumber daya manusia yang berkualitas adalah kunci utama dalam menciptakan 
-    layanan terbaik. Oleh sebab itu, Assistenku menerapkan proses seleksi yang ketat, 
-    pelatihan yang menyeluruh, serta standar operasional yang terukur demi menjaga kenyamanan 
-    dan keamanan klien. Setiap tenaga kerja yang bergabung bersama kami dibimbing untuk memiliki 
-    sikap profesional, disiplin, jujur, dan siap melayani dengan sepenuh hati.
+    Assistenku adalah platform layanan asistensi profesional yang hadir untuk menjawab kebutuhan 
+    masyarakat Indonesia dalam mendapatkan tenaga kerja yang terlatih, aman, dan berintegritas. 
+    Kami dibangun dengan visi besar untuk menjadi jembatan antara keluarga, individu, maupun 
+    pelaku usaha dengan tenaga asistensi yang memiliki standar tinggi dalam etika, kualitas layanan, 
+    dan profesionalitas kerja.
+    <br><br>
+    Didirikan sebagai solusi atas meningkatnya kebutuhan tenaga pendukung rumah tangga dan operasional, 
+    Assistenku percaya bahwa setiap keluarga berhak mendapatkan bantuan yang terpercaya, dan setiap 
+    tenaga kerja berhak mendapatkan kesempatan berkembang melalui pelatihan dan pembinaan berkelanjutan. 
+    Dengan pendekatan yang modern, terstandar, dan berbasis teknologi, Assistenku berkomitmen 
+    memberikan layanan terbaik untuk seluruh pelanggan di Indonesia.
   </p>
 </section>
 
 <section>
   <h2>Sejarah Singkat</h2>
-
   <p>
-    Assistenku berdiri atas dasar kepedulian terhadap meningkatnya kebutuhan asistensi rumah tangga 
-    dan tenaga kerja harian yang berkualitas. Banyak keluarga, pekerja urban, dan pelaku bisnis kecil 
-    mengalami kesulitan dalam menemukan tenaga profesional yang dapat dipercaya dan mampu bekerja 
-    sesuai standar. Dari sinilah Assistenku lahir—sebuah solusi yang menggabungkan teknologi, 
-    manajemen modern, dan sumber daya manusia terlatih untuk memberikan pengalaman pelayanan terbaik.
-  </p>
-
-  <p>
-    Sejak awal berdiri pada tahun 2023, Assistenku telah berkembang dengan fokus pada kualitas layanan, 
-    inovasi sistem operasional, dan komitmen terhadap kepuasan klien. Dengan semakin tumbuhnya permintaan, 
-    kami memperluas cakupan layanan dan menambah program pelatihan demi menciptakan tenaga asistensi yang 
-    kompeten dan terpercaya.
+    Assistenku berawal dari keresahan pendirinya terhadap rendahnya standar layanan asistensi di Indonesia, 
+    terutama dari sisi keamanan, akurasi penempatan, dan kesejahteraan pekerja. Banyak keluarga mengalami 
+    kesulitan menemukan tenaga yang dapat dipercaya, dan banyak pekerja yang kesulitan mendapatkan tempat 
+    kerja yang stabil. Dari sinilah Assistenku lahir — sebagai platform yang mengedepankan transparansi, 
+    pelatihan, seleksi ketat, dan proses pendampingan yang lebih manusiawi serta profesional.
+    <br><br>
+    Sejak berdiri, Assistenku terus mengembangkan sistem penyaluran berbasis seleksi, manajemen kompetensi, 
+    hingga sistem monitoring layanan, menyesuaikan kebutuhan keluarga modern dan perkembangan industri 
+    asistensi di Indonesia. Dengan legalitas lengkap dan struktur perusahaan yang jelas, kami terus 
+    memperluas cakupan layanan agar dapat membantu lebih banyak orang.
   </p>
 </section>
 
 <section>
-  <h2>Visi & Misi</h2>
-
-  <p><strong>Visi:</strong>  
-    Menjadi penyedia layanan asistensi paling dipercaya di Indonesia dengan mengutamakan kualitas, 
-    keamanan, dan kenyamanan klien.
+  <h2>Visi</h2>
+  <p>
+    Menjadi penyedia layanan asistensi paling tepercaya dan profesional di Indonesia, yang mengutamakan 
+    keamanan, kenyamanan, dan kualitas dalam setiap layanan.
   </p>
 
-  <p><strong>Misi:</strong></p>
-  <ul style="margin-left:20px;">
-    <li>Menyediakan tenaga kerja terlatih melalui proses seleksi dan pelatihan terstandar.</li>
-    <li>Menghadirkan layanan asistensi yang mudah diakses, cepat, dan aman.</li>
-    <li>Mengembangkan ekosistem pelayanan berbasis teknologi untuk meningkatkan efisiensi.</li>
-    <li>Mendukung keluarga dan bisnis dalam menyelesaikan berbagai kebutuhan harian secara profesional.</li>
-    <li>Membangun hubungan jangka panjang dengan klien melalui pelayanan terbaik.</li>
+  <h2>Misi</h2>
+  <ul>
+    <li>Menyediakan tenaga asistensi yang terlatih dan berkompeten.</li>
+    <li>Meningkatkan kesejahteraan tenaga kerja melalui pelatihan dan pembinaan berkelanjutan.</li>
+    <li>Memberikan pelayanan cepat, transparan, dan ramah bagi seluruh pelanggan.</li>
+    <li>Menciptakan standar baru dalam layanan asistensi modern berbasis teknologi.</li>
   </ul>
 </section>
 
 <section>
-  <h2>Founder & Manajemen</h2>
+  <h2>Founder & Co-Founder</h2>
 
   <div class="card-grid">
 
-    <!-- Founder -->
     <div class="card">
-      <img src="founder1.png" style="width:100%; border-radius:12px;" alt="">
-      <h3 style="margin-top:15px;">Abdurrahman Hanif</h3>
-      <p><strong>Pendiri & Direktur Operasional</strong></p>
-
+      <h3>Abdurrahman Hanif — Founder</h3>
       <p>
-        Abdurrahman Hanif merupakan sosok yang memiliki pengalaman dalam operasional layanan publik, 
-        manajemen SDM, serta pengelolaan sistem kerja modern. Dengan visi kuat untuk menciptakan 
-        ekosistem asistensi profesional, beliau merancang struktur operasional Assistenku agar mampu 
-        memberikan pelayanan dengan standar tinggi, efisien, dan aman bagi seluruh klien.
+        Abdurrahman Hanif adalah pendiri Assistenku yang memiliki visi kuat untuk membangun layanan 
+        asistensi modern yang lebih aman, profesional, dan terstruktur. Dengan pengalaman dalam 
+        manajemen operasional dan pengembangan sistem digital, Hanif berfokus membangun fondasi 
+        perusahaan yang berorientasi pada integritas, efisiensi, dan inovasi. Hanif percaya bahwa 
+        layanan asistensi bukan hanya tentang menyediakan tenaga kerja, tetapi tentang menghadirkan 
+        kepercayaan, kenyamanan, dan keberlanjutan bagi keluarga maupun pekerja.
       </p>
     </div>
 
-    <!-- Co-Founder -->
     <div class="card">
-      <img src="founder2.png" style="width:100%; border-radius:12px;" alt="">
-      <h3 style="margin-top:15px;">Putri Rahmadani</h3>
-      <p><strong>Co-Founder & HR Manager</strong></p>
-
+      <h3>Putri Rahmadani — Co-Founder</h3>
       <p>
-        Memiliki latar belakang dalam pengembangan sumber daya manusia, Putri Rahmadani berperan aktif 
-        dalam melakukan seleksi, pelatihan, dan pembinaan tenaga kerja. Fokus utamanya adalah 
-        memastikan setiap anggota tim memiliki etika kerja yang tinggi, memahami SOP layanan, 
-        dan mampu menjalankan tugas dengan profesionalisme terbaik.
+        Putri Rahmadani berperan sebagai co-founder yang berfokus pada pengelolaan operasional, 
+        pembinaan tenaga kerja, serta pengembangan kualitas layanan. Dengan kepedulian tinggi 
+        terhadap pemberdayaan perempuan dan peningkatan kualitas tenaga asistensi, Putri mendorong 
+        terciptanya lingkungan kerja yang lebih tertata dan profesional, sehingga membantu banyak 
+        tenaga kerja mendapatkan kesempatan kerja yang layak dan bermartabat.
       </p>
     </div>
 
@@ -128,31 +116,25 @@
 
 <section>
   <h2>Legalitas Perusahaan</h2>
+  <p>Berikut dokumen legalitas Assistenku:</p>
 
   <div class="card-grid">
     <div class="card">
-      <h3>NIB Resmi</h3>
-      <p>Assistenku telah terdaftar sebagai penyedia jasa tenaga kerja resmi dengan legalitas lengkap.</p>
-      <img src="NIB1.png" style="width:100%; margin-top:12px; border-radius:12px;">
+      <img src="NIB1.png" alt="NIB Dokumen 1" style="width:100%; border-radius:12px;">
     </div>
 
     <div class="card">
-      <h3>Dokumen Legalitas Tambahan</h3>
-      <p>Dokumen izin, sertifikasi, dan legalitas operasional lainnya telah terverifikasi.</p>
-      <img src="NIB2.png" style="width:100%; margin-top:12px; border-radius:12px;">
-
-      <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk"
-         class="btn-primary"
-         target="_blank"
-         style="display:block; margin-top:15px; text-align:center;">
-         Akses Dokumen Legalitas
-      </a>
+      <img src="NIB2.png" alt="NIB Dokumen 2" style="width:100%; border-radius:12px;">
     </div>
   </div>
+
+  <br>
+
+  <button id="legalitasBtn" class="lock-button locked">🔒 Akses Dokumen Legalitas</button>
 </section>
 
 <footer>
-  © 2025 Assistenku
+  © 2025 Assistenku – PT Assistenku Indonesia
 </footer>
 
 <script src="script.js"></script>
